// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`document.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# prettier-ignore
---
aaaaa:
           bbbbb
...
aaaaa:
           bbbbb

=====================================output=====================================
# prettier-ignore
---
aaaaa:
           bbbbb
---
aaaaa: bbbbb

================================================================================
`;

exports[`leading-comment.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# prettier-ignore
abc:     123
def:     456
# prettier-ignore
ghi:     789
---
# prettier-ignore
-        abc
-        def
# prettier-ignore
-        ghi

=====================================output=====================================
# prettier-ignore
abc:     123
def: 456
# prettier-ignore
ghi:     789
---
# prettier-ignore
-        abc
- def
# prettier-ignore
-        ghi

================================================================================
`;

exports[`middle-comment.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
abc:  !!str #   hello
   123
# prettier-ignore
def:  !!str #   hello
   456

=====================================output=====================================
abc: !!str #   hello
  123
# prettier-ignore
def:  !!str #   hello
   456

================================================================================
`;

exports[`top-comment.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# prettier-ignore
abc:     123
def:     456
# prettier-ignore
ghi:     789
---
# prettier-ignore
-        abc
-        def
# prettier-ignore
-        ghi

=====================================output=====================================
# prettier-ignore
abc:     123
def: 456
# prettier-ignore
ghi:     789
---
# prettier-ignore
-        abc
- def
# prettier-ignore
-        ghi

================================================================================
`;

exports[`trailing-comma.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
  # prettier-ignore
             {  sss  },       # 123
    {  qqqq },
  
  # prettier-ignore
          [ccc    ]       # 777
  , [ddd    ]
]

=====================================output=====================================
[
  # prettier-ignore
  {  sss  }, # 123
  { qqqq },

  # prettier-ignore
  [ccc    ], # 777
  [ddd],
]

================================================================================
`;

exports[`trailing-comment.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
abc:     123 # hello
# prettier-ignore
def:     456 # hello

=====================================output=====================================
abc: 123 # hello
# prettier-ignore
def:     456 # hello

================================================================================
`;
